--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header>
             <nav>
-                <img src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo">
+                <div class="logo-container"><img class="logo" src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo" width="191px" height="90px"></div>
                 <ul>
                     <li>
                         <a href="#">Hébergements</a>
@@ -37,9 +37,10 @@
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
                 <form class="form" action="">
-                    <i class="fa fa-solid fa-map-marker-alt"></i>
-                    <input type="text" onfocus="this.placeholder=''" placeholder="Marseille, France" name="search">
-                    <button type="submit">Rechercher</button> <!--<i class="fa-solid fa-magnifying-glass"></i>-->
+                    <span class="map-icon"><i class="fa fa-solid fa-map-marker-alt"></i></span>
+                    <input type="search" onfocus="this.placeholder=''" placeholder="Marseille, France" name="search">
+                    <button class="desktop-button" type="submit">Rechercher</button>
+                    <button class="mobile-button" type="submit"><span class="search-icon"><i class="fa fa-solid fa-search"></i></span></button>
                 </form>
                 <div class="filter-section">
                     <p class="filter-heading">Filtres</p>
@@ -78,9 +79,9 @@
                         </button>
                     </div>
                 </div>
-                <div class="results-message">
-                    <i class="fa fa-solid fa-info"></i>
-                    <p>Plus de 500 logements sont disponsibles dans cette ville</p>
+                <div class="results-container">
+                    <div class="results-icon"><i class="fa fa-solid fa-info"></i></div>
+                    <div class="results-message"><p>Plus de 500 logements sont disponsibles dans cette ville</p></div>
                 </div>
             </section>
             <section class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
